Новая страница новостей, стили для автора

--- a/author.html
+++ b/author.html
@@ -185,143 +185,146 @@
 				</div>
 			</section>
 
-<!-- PROJECTS -->
-			<section class="b-projects" id="projects">
-				<div class="project-item">
-					<div class="mobile-headline">
-						<div class="type">Project</div>
-						<div class="title">RUSS LAND</div>
-						<div class="date">28.04 - 29.08.2017</div>
-					</div>
-					<div class="project-row owl-carousel">
-						<div class="item headline">
-							<div class="type">Project</div>
-							<div class="title">RUSS LAND</div>
-							<div class="date">28.04 - 29.08.2017</div>
-						</div>
-						<div class="item">
-							<img src="images/author/1.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/2.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/3.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/4.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/5.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/6.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/7.jpg">
-						</div>
-						<div class="item goto">
-							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-						</div>
-						<!-- <a href="#" class="last"></a> -->
-					</div>
-				</div>	
-				<div class="project-item">
-					<div class="mobile-headline">
-						<div class="type">Group Project</div>
-						<div class="title">Conjured life</div>
-						<div class="date">28.04 - 29.08.2017</div>
-					</div>
-					<div class="project-row owl-carousel">
-						<div class="item headline">
-							<div class="type">Group Project</div>
-							<div class="title">Conjured life</div>
-							<div class="date">28.04 - 29.08.2017</div>
-						</div>
-						<div class="item">
-							<img src="images/author/6.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/7.jpg">
-						</div>
-						<div class="item goto">
-							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-						</div>
-						<!-- <a href="#" class="item last"></a> -->
-					</div>
-				</div>
-				<div class="project-item">
-					<div class="mobile-headline">
-						<div class="type">Project</div>
-						<div class="title">RUSS LAND</div>
-						<div class="date">28.04 - 29.08.2017</div>
-					</div>
-					<div class="project-row owl-carousel">
-						<div class="item headline">
-							<div class="type">Project</div>
-							<div class="title">RUSS LAND</div>
-							<div class="date">28.04 - 29.08.2017</div>
-						</div>
-						<div class="item">
-							<img src="images/author/1.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/2.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/3.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/4.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/5.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/6.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/7.jpg">
-						</div>
-						<div class="item goto">
-							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-						</div>
-						<!-- <a href="#" class="item last"></a> -->
-					</div>
-				</div>
-				<div class="project-item">
-					<div class="mobile-headline">
-						<div class="type">Group Project</div>
-						<div class="title">Conjured life</div>
-						<div class="date">28.04 - 29.08.2017</div>
-					</div>
-					<div class="project-row owl-carousel">
-						<div class="item headline">
-							<div class="type">Group Project</div>
-							<div class="title">Conjured life</div>
-							<div class="date">28.04 - 29.08.2017</div>
-						</div>
-						<div class="item">
-							<img src="images/author/3.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/4.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/5.jpg">
-						</div>
-						<div class="item">
-							<img src="images/author/7.jpg">
-						</div>
-						<div class="item goto">
-							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-						</div>
-						<!-- <a href="#" class="item last"></a> -->
-					</div>
-				</div>
-			</section>
-			<hr class="trans" />
+		</div>
 
+<!-- PROJECTS -->
+		<section class="b-projects" id="projects">
+			<div class="project-item">
+				<div class="mobile-headline">
+					<div class="type">Project</div>
+					<div class="title">RUSS LAND</div>
+					<div class="date">28.04 - 29.08.2017</div>
+				</div>
+				<div class="project-row owl-carousel">
+					<div class="item headline">
+						<div class="type">Project</div>
+						<div class="title">RUSS LAND</div>
+						<div class="date">28.04 - 29.08.2017</div>
+					</div>
+					<div class="item">
+						<img src="images/author/1.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/2.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/3.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/4.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/5.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/6.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/7.jpg">
+					</div>
+					<div class="item goto">
+						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+					</div>
+					<!-- <a href="#" class="last"></a> -->
+				</div>
+			</div>	
+			<div class="project-item">
+				<div class="mobile-headline">
+					<div class="type">Group Project</div>
+					<div class="title">Conjured life</div>
+					<div class="date">28.04 - 29.08.2017</div>
+				</div>
+				<div class="project-row owl-carousel">
+					<div class="item headline">
+						<div class="type">Group Project</div>
+						<div class="title">Conjured life</div>
+						<div class="date">28.04 - 29.08.2017</div>
+					</div>
+					<div class="item">
+						<img src="images/author/6.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/7.jpg">
+					</div>
+					<div class="item goto">
+						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+					</div>
+					<!-- <a href="#" class="item last"></a> -->
+				</div>
+			</div>
+			<div class="project-item">
+				<div class="mobile-headline">
+					<div class="type">Project</div>
+					<div class="title">RUSS LAND</div>
+					<div class="date">28.04 - 29.08.2017</div>
+				</div>
+				<div class="project-row owl-carousel">
+					<div class="item headline">
+						<div class="type">Project</div>
+						<div class="title">RUSS LAND</div>
+						<div class="date">28.04 - 29.08.2017</div>
+					</div>
+					<div class="item">
+						<img src="images/author/1.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/2.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/3.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/4.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/5.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/6.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/7.jpg">
+					</div>
+					<div class="item goto">
+						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+					</div>
+					<!-- <a href="#" class="item last"></a> -->
+				</div>
+			</div>
+			<div class="project-item">
+				<div class="mobile-headline">
+					<div class="type">Group Project</div>
+					<div class="title">Conjured life</div>
+					<div class="date">28.04 - 29.08.2017</div>
+				</div>
+				<div class="project-row owl-carousel">
+					<div class="item headline">
+						<div class="type">Group Project</div>
+						<div class="title">Conjured life</div>
+						<div class="date">28.04 - 29.08.2017</div>
+					</div>
+					<div class="item">
+						<img src="images/author/3.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/4.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/5.jpg">
+					</div>
+					<div class="item">
+						<img src="images/author/7.jpg">
+					</div>
+					<div class="item goto">
+						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+					</div>
+					<!-- <a href="#" class="item last"></a> -->
+				</div>
+			</div>
+		</section>
+		<hr class="trans" />
+
+		<div id="main" class="container">
 <!-- NEWS -->
 			<div class="12u$">
 				<!-- NEWS-TAGS -->
