--- a/news.html
+++ b/news.html
@@ -98,11 +98,11 @@
 			</ul>
 
 			<!-- NEWS-SNIP -->
-			<section class="panel news row 0% grid">
-				<!-- NEWS-BANNER -->
-				<banner class="12u$ news-snip fit fairs booklet">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/5.png">
+			<section class="panel news row isotope-grid">
+				<div class="item 4u 6u(small) 12u$(xsmall) exhibition">
+					<span class="news-snip-last">LAST NEWS</span>
+					<a href="news-item.html" title="Read" class="image fit">
+						<img src="images/news/1.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
@@ -110,136 +110,117 @@
 							<li><a href="">EXHIBITION</a></li>
 							<li><a href="">EXHIBITION</a></li>
 						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA IN STREET ART MUSEUM</a></h4>
+						<h4><a href="news-item.html" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
-				</banner>
-
-				<div class="12$ salvattore-2col" data-columns>
-					<div class="item exhibition">
-						<span class="news-snip-last">LAST NEWS</span>
-						<a href="news-item.html" title="Read" class="image fit">
-							<img src="images/news/1.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="news-item.html" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u 6u$(small) 12u$(xsmall) exhibition" data-wow-delay="0.25s">
+					<span class="news-snip-last">LAST NEWS</span>
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/2.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
-					<div class="item exhibition" data-wow-delay="0.25s">
-						<span class="news-snip-last">LAST NEWS</span>
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/2.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u$ 6u(small) 12u$(xsmall) exhibition">
+					<span class="news-snip-last">LAST NEWS</span>
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/3.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
-					<div class="item exhibition">
-						<span class="news-snip-last">LAST NEWS</span>
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/3.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u 6u$(small) 12u$(xsmall) artists" data-wow-delay="0.15s">
+					<span class="news-snip-last">LAST NEWS</span>
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/4.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
-					<div class="item artists" data-wow-delay="0.15s">
-						<span class="news-snip-last">LAST NEWS</span>
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/4.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u 6u(small) 12u$(xsmall) fairs booklet">
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/6.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
-					<div class="item fairs booklet">
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/6.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u$ 6u$(small) 12u$(xsmall) artists" data-wow-delay="0.2s">
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/7.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
-					<div class="item artists" data-wow-delay="0.2s">
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/7.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u 6u(small) 12u$(xsmall) booklet">
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/8.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
-					<div class="item booklet">
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/8.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
-					</div>
-					<div class="item exhibition artists" data-wow-delay="0.15s">
-						<a href="" title="Read" class="image fit">
-							<img src="images/news/9.png">
-						</a>
-						<div class="news-snip-content">
-							<ul class="news-snip-tags">
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-								<li><a href="">EXHIBITION</a></li>
-							</ul>
-							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-							<span class="news-snip-date">08.08.2016</span>
-						</div>
+				</div>
+				<div class="item 4u 6u$(small) 12u$(xsmall) exhibition artists" data-wow-delay="0.15s">
+					<a href="" title="Read" class="image fit">
+						<img src="images/news/9.png">
+					</a>
+					<div class="news-snip-content">
+						<ul class="news-snip-tags">
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+							<li><a href="">EXHIBITION</a></li>
+						</ul>
+						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+						<span class="news-snip-date">08.08.2016</span>
 					</div>
 				</div>
 			</section>
