Сетка новостей + изотоп

--- a/news.html
+++ b/news.html
@@ -292,5 +292,8 @@
 		<!-- MAINJS -->
 		<script src="assets/js/main.js"></script>
 
+		<!-- New scripts -->
+		<script src="assets/js/scripts.js"></script>
+
 	</body>
 </html>
