Правки стилей, скрипт скрытия навигации, доработки буклета, проекта, главной

--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
 		</style>
 	</head>
 
-	<body id="top" class="project-page">
+	<body id="top" class="project-page second-screen">
 
 <!-- LOADER -->
 		<div class="an-loader"><span class="an-loader-img"></span></div>
