--- a/booklet.html
+++ b/booklet.html
@@ -99,6 +99,22 @@
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
 				</div>
+				<div class="carousel-cell" data-flickity-bg-lazyload="images/4.jpg">
+					<div class="banner-center-title">
+						<h2>BOOKLET</h2>
+						<h2 class="small-label">the magazine of Anna Nova gallery</h2>
+					</div>
+					<div class="mask-cursor-left"></div>
+					<div class="mask-cursor-right"></div>
+				</div>
+				<div class="carousel-cell" data-flickity-bg-lazyload="images/4.jpg">
+					<div class="banner-center-title">
+						<h2>BOOKLET</h2>
+						<h2 class="small-label">the magazine of Anna Nova gallery</h2>
+					</div>
+					<div class="mask-cursor-left"></div>
+					<div class="mask-cursor-right"></div>
+				</div>
 			</div>
 		</section>
 
