--- a/index.html
+++ b/index.html
@@ -134,27 +134,36 @@
 						</div>
 					</div>
 				</div>
-				<div class="carousel-cell" data-flickity-bg-lazyload="images/1.jpg">
+
+				<div class="carousel-cell white-inner-theme" data-flickity-bg-lazyload="images/1.jpg">
 					<div class="banner-title">
 						<h2><a href="">Street art by STAS BAGS<br>14.08−5.09</a></h2>
 					</div>
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
 				</div>
-				<div class="carousel-cell" data-flickity-bg-lazyload="images/2.jpg">
+				<div class="carousel-cell black-inner-theme" data-flickity-bg-lazyload="images/2.jpg">
 					<div class="banner-title">
 						<h2><a href="">Pavel Brat. Paper art<br>7.06−1.09</a></h2>
 					</div>
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
 				</div>
-				<div class="carousel-cell" data-flickity-bg-lazyload="images/3.jpg">
+				<div class="carousel-cell white-inner-theme" data-flickity-bg-lazyload="images/3.jpg">
 					<div class="banner-title">
 						<h2><a href="">Robert Longo<br>7.06−1.09</a></h2>
 					</div>
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
 				</div>
+				<div class="carousel-cell black-inner-theme" data-flickity-bg-lazyload="images/2.jpg">
+					<div class="banner-title">
+						<h2><a href="">Pavel Brat. Paper art<br>7.06−1.09</a></h2>
+					</div>
+					<div class="mask-cursor-left"></div>
+					<div class="mask-cursor-right"></div>
+				</div>
+
 			</div>
 		</section>
 
