Фиксы, дебаггинг и рестайлинг страниц

--- a/author.html
+++ b/author.html
@@ -42,7 +42,7 @@
 		</style>
 	</head>
 
-	<body id="top" class="author-page">
+	<body id="top" class="author-page second-screen">
 
 <!-- LOADER -->
 		<div class="an-loader"><span class="an-loader-img"></span></div>
