--- a/booklet.html
+++ b/booklet.html
@@ -432,14 +432,14 @@
 		<section class="panel download">
 			<h4 class="item">
 				<a href="#" target="_blank">
-					<div class="text">DOANLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+					<div class="text">DOANLOAD PDF <span class="arr"></span></div>
 					<div class="label">MEDIA KIT</div>
 				</a>
 			</h4>
 
 			<h4 class="item">
 				<a href="#" target="_blank">
-					<div class="text">DOANLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+					<div class="text">DOANLOAD PDF <span class="arr"></span></div>
 					<div class="label">TECHNICAL<br>REQUIREMENTS</div>
 				</a>
 			</h4>
