Стили страницы автора

--- a/author.html
+++ b/author.html
@@ -179,7 +179,7 @@
 
 					<div class="download">
 						<a href="#">
-							<h4>DOWNLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></h4>
+							<h4>DOWNLOAD PDF <span class="arr"></span></h4>
 						</a>
 					</div>
 				</div>
@@ -223,7 +223,7 @@
 						<img src="images/author/7.jpg">
 					</div>
 					<div class="item goto">
-						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
 					<!-- <a href="#" class="last"></a> -->
 				</div>
@@ -247,7 +247,7 @@
 						<img src="images/author/7.jpg">
 					</div>
 					<div class="item goto">
-						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
 					<!-- <a href="#" class="item last"></a> -->
 				</div>
@@ -286,7 +286,7 @@
 						<img src="images/author/7.jpg">
 					</div>
 					<div class="item goto">
-						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
 					<!-- <a href="#" class="item last"></a> -->
 				</div>
@@ -316,7 +316,7 @@
 						<img src="images/author/7.jpg">
 					</div>
 					<div class="item goto">
-						<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						<a href="#">go to&nbsp;&nbsp;<img src="images/icon/arrow-b.svg"><br>project</a>
 					</div>
 					<!-- <a href="#" class="item last"></a> -->
 				</div>
@@ -452,8 +452,6 @@
 				</div>
 			</section>
 			<!-- <div class="action 12u align-center news-more"><a class="button special">VIEW MORE</a></div> -->
-
-			<hr class="trans" />
 
 		</div>
 
