--- a/author.html
+++ b/author.html
@@ -195,7 +195,7 @@
 					<div class="title">RUSS LAND</div>
 					<div class="date">28.04 - 29.08.2017</div>
 				</div>
-				<div class="project-row owl-carousel">
+				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Project</div>
 						<div class="title">RUSS LAND</div>
@@ -228,13 +228,14 @@
 					<!-- <a href="#" class="last"></a> -->
 				</div>
 			</div>	
+
 			<div class="project-item">
 				<div class="mobile-headline">
 					<div class="type">Group Project</div>
 					<div class="title">Conjured life</div>
 					<div class="date">28.04 - 29.08.2017</div>
 				</div>
-				<div class="project-row owl-carousel">
+				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Group Project</div>
 						<div class="title">Conjured life</div>
@@ -258,7 +259,8 @@
 					<div class="title">RUSS LAND</div>
 					<div class="date">28.04 - 29.08.2017</div>
 				</div>
-				<div class="project-row owl-carousel">
+
+				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Project</div>
 						<div class="title">RUSS LAND</div>
@@ -297,7 +299,8 @@
 					<div class="title">Conjured life</div>
 					<div class="date">28.04 - 29.08.2017</div>
 				</div>
-				<div class="project-row owl-carousel">
+
+				<div class="flickity-row">
 					<div class="item headline">
 						<div class="type">Group Project</div>
 						<div class="title">Conjured life</div>
